[metadata]
name = Secretary of State
version = 0.0.0
description = "Convert csv state machines to mermaid diagrams"
author = aidnem
license = MIT
license_files =
    LICENSE
platforms = unix, linux, osx, cygwin, win32

classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    secretary_of_state
install_requires =


[options.entry_points]
console_scripts =
    secretary = secretary_of_state.secretary_of_state:main
